--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+
+<mat-form-field>
+  <mat-select [(value)]="codeType">
+    <mat-option>None</mat-option>
+    <mat-option value="barCode">BarCode</mat-option>
+    <mat-option value="qrCode">QRCode</mat-option>
+  </mat-select>
+</mat-form-field>&nbsp;
+<button mat-raised-button color="primary" (click)="print()">Print</button>
